--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header-grid{
+  display: grid;
+  grid-template-columns: 1;
+  gap: 20px;
+  padding: 20px;
+  font-size : 40px;
+}
+
+.header-item{
+  text-align: center;
+}
+
+
