--- a/src/views/errorpage.ejs
+++ b/src/views/errorpage.ejs
@@ -5,9 +5,9 @@
     <title>FileShare</title>
   </head>
   <body>
-    <div className="header-grid">
-        <div className="header-item">FileShare</div>
-        <div className="header-item">An Error Occurred!</div>
+    <div class="header-grid">
+        <div class="header-item">FileShare</div>
+        <div class="header-item">An Error Occurred!</div>
     </div>
   </body>
 </html>
