--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../public/html-objects.css">
     <title>FileShare</title>
   </head>
   <body>
