--- a/src/public/html-objects.css
+++ b/src/public/html-objects.css
@@ -16,7 +16,7 @@ code {
   
 .header-grid{
     display: grid;
-    grid-template-columns: 1;
+    grid-template-columns: 1fr;
     gap: 20px;
     padding: 20px;
     font-size : 40px;
