--- a/src/views/errorpage.ejs
+++ b/src/views/errorpage.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/html-objects.css">
+    <link rel="stylesheet" href="/home/admin/FileShareFrontEnd/public/html-objects.css">
     <title>FileShare</title>
   </head>
   <body>
