--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/home/admin/FileShareFrontEnd/src/public/html-objects.css">
+    <link rel="stylesheet" href="http://192.168.1.130:65000/public/html-objects.css">
     <title>FileShare</title>
   </head>
   <body>
