--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="dabblestudios.tplinkdns.com:16000/css">
+    <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
     <title>FileShare</title>
   </head>
   <body>
