Added header to seperate file

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -6,9 +6,7 @@
     <title>FileShare</title>
   </head>
   <body>
-    <div class="header-grid">
-        <div class="header-item">FileShare</div>
-    </div>
+    <%- include("reusables/header") %>
     <div class="header-item">Welcome!</div>
   </body>
 </html>
