--- a/src/views/reusables/header.ejs
+++ b/src/views/reusables/header.ejs
@@ -6,7 +6,8 @@
     <title>FileShare</title>
   </head>
   <body>
-    <%- include("reusables/header") %>
-    <div class="header-item">An Error Occurred!</div>
+    <div class="header-grid">
+        <div class="header-item">FileShare</div>
+    </div>
   </body>
 </html>
