--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -8,5 +8,10 @@
   <body>
     <%- include("reusables/header") %>
     <div class="header-item">Welcome!</div>
+    <div id="input-container">
+    <!-- username comes here-->
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
