fixed script path

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -12,6 +12,6 @@
     <!-- username comes here-->
     </div>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
