--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -12,6 +12,6 @@
     <!-- username comes here-->
     </div>
 
-    <script src="../script.js"></script>
+    <script src="http://dabblestudios.tplinkdns.com:16000/script"></script>
   </body>
 </html>
