testing input div

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,6 +9,7 @@
     <%- include("reusables/header") %>
     <div class="header-item">Welcome!</div>
     <div id="input-container">
+      <p>pelle</p>
     <!-- username comes here-->
     </div>
 
