--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -8,7 +8,7 @@
   <body>
     <%- include("reusables/header") %>
     <div class="header-item">Welcome!</div>
-    <div id="input-container">
+    <div id="input-container" class="input-grid">
     <!-- username comes here-->
     </div>
 
