--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
-    <title>FileShare</title>
-  </head>
-  <body>
-    <%- include("reusables/header") %>
-    <div class="header-item">Welcome!</div>
-    <div id="input-container" class="input-grid">
-    <!-- username comes here-->
-    </div>
-
-    <script type="module" src="http://dabblestudios.tplinkdns.com:16000/script"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
+  <title>Homepage</title>
+</head>
+<body>
+  
+</body>
 </html>
