--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
-  <title>Homepage</title>
-</head>
-<body>
-  
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
+    <title>Homepage</title>
+  </head>
+  <body>
+  </body>
 </html>
