--- a/src/public/html-objects.css
+++ b/src/public/html-objects.css
@@ -30,6 +30,8 @@ code {
 .input-grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
 
 .form-element {
