--- a/src/public/html-objects.css
+++ b/src/public/html-objects.css
@@ -34,10 +34,13 @@ code {
     justify-content: center;
 }
 
-.form-element {
+.form-element{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-  
+
+form{
+    text-align: center;
+}
   
