--- a/src/public/html-objects.css
+++ b/src/public/html-objects.css
@@ -41,6 +41,9 @@ code {
 }
 
 form{
-    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
 }
   
