--- a/src/public/html-objects.css
+++ b/src/public/html-objects.css
@@ -41,5 +41,12 @@ code {
     padding: 10px;
 }
 
+.form-element-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
 
   
