Added display of files

--- a/src/views/errorpage.ejs
+++ b/src/views/errorpage.ejs
@@ -6,7 +6,7 @@
     <title>FileShare</title>
   </head>
   <body>
-    <%- include("reusables/header") %>
+    <% include("reusables/header") %>
     <div class="header-item">An Error Occurred!</div>
   </body>
 </html>
