--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -6,5 +6,13 @@
     <title>Homepage</title>
   </head>
   <body>
+
+    <% if (files)%>
+      <ul>
+        <% foreach(file in files) %>
+          <%file%>
+        %>
+      </ul>
+    
   </body>
 </html>
