fixed syntax on homepage display of files

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,9 +9,9 @@
 
     <% if (files)%>
       <ul>
-        <% foreach(file in files) %>
-          <%file%>
-        %>
+        <% files.foreach(function(file){ %>
+          <li><%file%></li>
+        <% });%>
       </ul>
     
   </body>
