--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,7 +9,7 @@
 
     <% if (files)%>
       <ul>
-        <% files.foreach(function(file){ %>
+        <% files.forEach(function(file){ %>
           <li><%file%></li>
         <% });%>
       </ul>
