--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,8 +9,8 @@
 
     <% if (files)%>
       <ul>
-        <% files.forEach(function(file){ %>
-          <li><%file%></li>
+        <% Object.keys(files).forEach(function(file){ %>
+          <li><%files[file]%></li>
         <% });%>
       </ul>
     
