--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -10,7 +10,7 @@
     <% if (files)%>
       <ul>
         <% Object.keys(files).forEach(function(file){ %>
-          <li><%files[file]%></li>
+          <li><%=files[file]%></li>
         <% });%>
       </ul>
     
