--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
     <title>Homepage</title>
+    <%include("reusables/header")%>
   </head>
   <body>
 
