--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -11,7 +11,7 @@
     <% if (files)%>
       <ul>
         <% Object.keys(files).forEach(function(file){ %>
-          <li><%=files[file]%> | id = <%=file%><button = value="Download" onclick="OnDownloadClick('<%=file%>')"> </button></li>
+          <li><%=files[file]%> | id = <%=file%><button onclick="OnDownloadClick('<%=file%>')">Download </button></li>
         <% });%>
       </ul>
   </body>
