--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
     <title>Homepage</title>
-    <script src="http://dabblestudios.tplinkdns.com:16000/buttonScript.js"></script>
+    <script src="http://dabblestudios.tplinkdns.com:16000/buttonScript"></script>
   </head>
   <body>
     <%- include("reusables/header")%>
