Added upload button.

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -14,5 +14,12 @@
           <li><%=files[file]%> | id = <%=file%><button onclick="OnDownloadClick('<%=file%>')">Download </button></li>
         <% });%>
       </ul>
+
+
+    <form id="uploadForm">
+      <input type = "file" id="fileSelect">Upload/>
+      <button onclick="OnUploadClick"
+    </form>
+    </div>
   </body>
 </html>
