Fixed text not being on the button.

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -17,8 +17,8 @@
 
 
     <form id="uploadForm">
-      <input type = "file" id="fileSelect">Upload/>
-      <button onclick="OnUploadClick"
+      <input type = "file" id="fileSelect">/>
+      <button onclick="OnUploadClick">Upload</button
     </form>
     </div>
   </body>
