--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -17,9 +17,8 @@
 
 
     <form id="uploadForm">
-      <input type = "file" id="fileSelect">/>
-      <button onclick="OnUploadClick()">Upload</button
+      <input type = "file" id="fileSelect">
+      <button onclick="OnUploadClick()">Upload</button>
     </form>
-    </div>
   </body>
 </html>
