--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -18,7 +18,7 @@
 
     <form id="uploadForm">
       <input type = "file" id="fileSelect">
-      <button onclick="OnUploadClick()">Upload</button>
+      <button type="button" onclick="OnUploadClick()">Upload</button>
     </form>
   </body>
 </html>
