Added a name field to input field type of file.

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -17,7 +17,7 @@
 
 
     <form id="uploadForm">
-      <input type = "file" id="fileSelect">
+      <input type = "file" id="fileSelect" name = fileSelect>
       <button type="button" onclick="OnUploadClick()">Upload</button>
     </form>
   </body>
