--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -12,7 +12,7 @@
       <ul>
         <% Object.keys(files).forEach(function(file){ %>
           <li><%=files[file]%> | id = <%=file%><button onclick="OnDownloadClick('<%=file%>')">Download</button>
-            <% if (user == 1)%>
+            <% if (UserLevel == 1)%>
               <button>Delete</button>
           </li>
         
