--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -13,7 +13,7 @@
         <% Object.keys(files).forEach(function(file){ %>
           <li><%=files[file]%> | id = <%=file%><button onclick="OnDownloadClick('<%=file%>')">Download</button>
             <% if (user == 1){%>
-              <button>Delete</button>
+              <button onclick="OnDeleteClick('<%=file%>')">Delete</button>
             <%}%>
           </li>
         
