--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
+    <link rel="stylesheet" href="https://dabblestudios.tplinkdns.com:16000/css">
     <title>Homepage</title>
-    <script src="http://dabblestudios.tplinkdns.com:16000/buttonScript"></script>
+    <script src="https://dabblestudios.tplinkdns.com:16000/buttonScript"></script>
   </head>
   <body>
     <%- include("reusables/header")%>
