--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://dabblestudios.tplinkdns.com:16000/css">
+    <link rel="stylesheet" href="https://dabblestudios.tplinkdns.com:16000/css">
     <title>LogInPage</title>
   </head>
   <body>
@@ -12,6 +12,6 @@
     <!-- username comes here-->
     </div>
 
-    <script type="module" src="http://dabblestudios.tplinkdns.com:16000/script"></script>
+    <script type="module" src="https://dabblestudios.tplinkdns.com:16000/script"></script>
   </body>
 </html>
